# simple-claude-board

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_ko.md
.github/workflows/: release.yml
benches/: parser_bench.rs  render_bench.rs
docs/planning/: 06-tasks.md
src/: app.rs  event.rs  main.rs
src/data/: state.rs  tasks_parser.rs  tasks_writer.rs  watcher.rs
src/ui/: claude_output.rs  detail.rs  gantt.rs  help.rs  retry_modal.rs  statusbar.rs
tests/: error_analysis_connection.rs  full_pipeline.rs  gantt_integration.rs  tui_connection.rs
