[package]
name = "simple-claude-board"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "Claude Code orchestration TUI dashboard"
license = "MIT"
repository = "https://github.com/insightflo/simple-claude-board"
categories = ["command-line-interface", "development-tools"]
keywords = ["claude", "tui", "dashboard", "orchestration"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
nom = "7"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
insta = "1"
tempfile = "3"
tokio-test = "0.4"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "render_bench"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1
